package fitnessTracker;

public interface ITraining {
    long getCalories();
    String getName();
}
