@startuml

Person *-- Training
ITraining <|-- Pushups
ITraining <|-- Running
ITraining <|-- Situps
ITraining <|-- Skiprope
ITraining <|-- Swimming
Training *-- ITraining

class Person {
    -name : String;
    -trainingList : ArrayList<Training>;

    +Person(name : String)

    +addTraining(training : Training) : void
    +seeTraining() : void
    +getName() : String
    +getTrainingList() : ArrayList<Training>
    +getTotalCalories() : long
}

class Training{
    -training : ITraining;
    -durationTraining : long;

    +Training(training : trainingInterface)

    +endTraining(durationTraining : long) : void
    +getDurationTraining() : long
    +getCalories() : long
    +getTraining() : ITraining
}

interface ITraining{
    +getCalories() : long
    +getName() : String
}

class Pushups{
    name : String = "Плавание"
    calories : long =  1
    +getCalories() : long
    +getName() : String
}

class Running{
    name :String = "Бег"
    calories : long =  2
    +getCalories() : long
    +getName() : String
}
class Situps{
    name :String = "Приседания"
    calories : long =  3
    +getCalories() : long
    +getName() : String
}
class Skiprope{
    name :String = "Скакалка"
    calories : long =  4
    +getCalories() : long
    +getName() : String
}
class Swimming{
    name :String = "Плавание"
    calories : long =  5
    +getCalories() : long
    +getName() : String
}
@enduml